Fix a gray strip appearing at the top of fullscreen windows which have been in immersive fullscreen.

This was a funny one. TabWindowController, which is an NSWindowDelegate,
registered itself for NSWindowWillEnterFullScreenNotification and
NSWindowWillExitFullScreenNotification explicitly so that subclasses
which implemented the equivalent delegate methods wouldn't have to worry
about calling super. In response to those notifications, it hides and
shows the tab strip background view.

On entering immersive fullscreen, BrowserWindowController (which
inherits from TabWindowController) unsets itself as the window's
delegate. It turns out that AppKit automatically registers the standard
delegate methods with NSNotificationCenter, and unregisters them when an
object stops being the window delegate. This resulted in
TabWindowController's observers also getting unregistered as part of
entering immersive fullscreen.

This fixes that issue by just using the standard delegate methods and
expecting subclasses (of which there appears to only be one:
BrowserWindowController) to call super. I think that's reasonable;
TabWindowController has NSWindowDelegate in its public interface.

Bug: 800942, 779082
Change-Id: Icea060fc13927941e18c49635a44f74de9e7bdbe